--- a/index.html
+++ b/index.html
@@ -4,10 +4,137 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>F8 Project 02</title>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400&family=Sen:wght@400..800&display=swap"
+      rel="stylesheet"
+    />
     <!-- reset CSS -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <!-- style CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <main style="height: 5000px">
+      <header class="header fixed">
+        <div class="main-content">
+          <div class="body">
+            <!-- Logo -->
+            <img src="./assets/img/Lesson..svg" alt="Lesson." class="logo" />
+
+            <!-- nav -->
+            <nav class="nav">
+              <ul>
+                <li class="active">
+                  <a href="#!"> Home </a>
+                </li>
+                <li>
+                  <a href="#!"> Courses </a>
+                </li>
+                <li>
+                  <a href="#!"> Pricing </a>
+                </li>
+                <li>
+                  <a href="#!"> Reviews </a>
+                </li>
+              </ul>
+            </nav>
+
+            <!-- Action -->
+            <div class="action">
+              <a href="#!" class="btn sign-up-btn">Sign Up</a>
+            </div>
+          </div>
+        </div>
+      </header>
+
+      <!-- ************ Hero ************* -->
+      <div class="hero">
+        <div class="main-content">
+          <div class="body">
+            <!-- Hero left -->
+            <div class="media-block">
+              <img
+                src="./assets/img/hero-img.svg"
+                alt="Learn without limits and spread knowledge."
+                class="img"
+              />
+
+              <div class="hero-summary">
+                <div class="item">
+                  <div class="icon">
+                    <img src="./assets/img/Orion_page.svg" alt="UI/UX Design" />
+                  </div>
+
+                  <div class="info">
+                    <div class="label">20 Courses</div>
+                    <div class="title">UI/UX Design</div>
+                  </div>
+                </div>
+
+                <div class="item">
+                  <div class="icon">
+                    <img
+                      src="./assets/img/Orion_code-window.svg"
+                      alt="Development"
+                    />
+                  </div>
+
+                  <div class="info">
+                    <div class="label">20 Courses</div>
+                    <div class="title">Development</div>
+                  </div>
+                </div>
+
+                <div class="item">
+                  <div class="icon">
+                    <img
+                      src="./assets/img/Orion_megaphone.svg"
+                      alt="Marketing"
+                    />
+                  </div>
+
+                  <div class="info">
+                    <div class="label">30 Courses</div>
+                    <div class="title">Marketing</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Hero right -->
+            <div class="content-block">
+              <h1 class="heading">
+                Learn without limits and spread knowledge.
+              </h1>
+
+              <p class="desc">
+                Build new skills for that “this is my year” feeling with
+                courses, certificates, and degrees from world-class universities
+                and companies.
+              </p>
+
+              <div class="cta-group">
+                <a href="#!" class="btn hero-cta">See Courses</a>
+                <button class="watch-video">
+                  <div class="icon">
+                    <img src="./assets/img/play.svg" alt="Watch Video" />
+                  </div>
+                  <span>Watch Video</span>
+                </button>
+              </div>
+
+              <p class="desc">Recent engagement</p>
+              <p class="desc stats">
+                <strong>50K</strong> Students 
+                <strong>70+</strong> Courses
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
