--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
               <div class="hero-summary">
                 <div class="item">
                   <div class="icon">
-                    <img src="./assets/img/Orion_page.svg" alt="UI/UX Design" />
+                    <img
+                      src="./assets/icons/Orion_page.svg"
+                      alt="UI/UX Design"
+                    />
                   </div>
 
                   <div class="info">
@@ -77,7 +80,7 @@
                 <div class="item">
                   <div class="icon">
                     <img
-                      src="./assets/img/Orion_code-window.svg"
+                      src="./assets/icons/Orion_code-window.svg"
                       alt="Development"
                     />
                   </div>
@@ -91,7 +94,7 @@
                 <div class="item">
                   <div class="icon">
                     <img
-                      src="./assets/img/Orion_megaphone.svg"
+                      src="./assets/icons/Orion_megaphone.svg"
                       alt="Marketing"
                     />
                   </div>
@@ -106,7 +109,7 @@
 
             <!-- Hero right -->
             <div class="content-block">
-              <h1 class="heading">
+              <h1 class="heading lv1">
                 Learn without limits and spread knowledge.
               </h1>
 
@@ -128,9 +131,159 @@
 
               <p class="desc">Recent engagement</p>
               <p class="desc stats">
-                <strong>50K</strong> Students 
-                <strong>70+</strong> Courses
+                <strong>50K</strong> Students <strong>70+</strong> Courses
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- ************ Popular ************* -->
+      <div class="popular">
+        <div class="main-content">
+          <!-- popular-top -->
+          <div class="popular-top">
+            <div class="info">
+              <h2 class="heading lv2">Our popular courses</h2>
+              <p class="desc">
+                Build new skills with new trendy courses and shine for the next
+                future career.
+              </p>
+            </div>
+
+            <div class="control">
+              <button class="control-btn">
+                <svg
+                  width="8"
+                  height="14"
+                  viewBox="0 0 8 14"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M7 1L1 7L7 13"
+                    stroke="currentcolor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+              <button class="control-btn">
+                <svg
+                  width="8"
+                  height="14"
+                  viewBox="0 0 8 14"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M1 1L7 7L1 13"
+                    stroke="currentcolor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <!-- Course list-->
+          <div class="course-list">
+            <!-- Course item 1 -->
+            <div class="course-item">
+              <a href="#!">
+                <img
+                  src="./assets/img/course-1.jpg"
+                  alt="Basic web design"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title"><a href="#!">Basic web design</a></h3>
+                  <div class="rating">
+                    <img
+                      src="./assets/icons/star.svg"
+                      alt="Star"
+                      class="star"
+                    />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn book-btn">Book Now</button>
+                </div>
+              </div>
+            </div>
+
+            <!-- Course item 2 -->
+            <div class="course-item">
+              <a href="#!">
+                <img
+                  src="./assets/img/course-2.jpg"
+                  alt="UI/UX design"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title"><a href="#!">UI/UX design</a></h3>
+                  <div class="rating">
+                    <img
+                      src="./assets/icons/star.svg"
+                      alt="Star"
+                      class="star"
+                    />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn book-btn">Book Now</button>
+                </div>
+              </div>
+            </div>
+
+            <!-- Course item 3 -->
+            <div class="course-item">
+              <a href="#!">
+                <img
+                  src="./assets/img/course-3.jpg"
+                  alt="Web App design"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title">
+                    <a href="#!">Web App design</a>
+                  </h3>
+                  <div class="rating">
+                    <img
+                      src="./assets/icons/star.svg"
+                      alt="Star"
+                      class="star"
+                    />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn book-btn">Book Now</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
